--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-aiohttp==4.8.0
-pymongo[srv]==4.1.1
-motor==3.1.3
-Pyrogram==2.14.0
-TgCrypto==1.2.3
-PyBypass==2.0.1
+aiohttp
+pymongo[srv]
+motor
+Pyrogram
+TgCrypto
+PyBypass
 mdisky
 shortzy
 aiofiles
